# Synthetic-Persona-Simulation-Engine

./: README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: sample_events.csv
notebooks/: persona_simulation_demo.ipynb
src/synthetic_persona_engine/: __init__.py  cli.py
src/synthetic_persona_engine/analytics/: __init__.py  reporting.py  visualization.py
src/synthetic_persona_engine/data/: __init__.py  etl.py  features.py
src/synthetic_persona_engine/modeling/: __init__.py  segmentation.py  traits.py
src/synthetic_persona_engine/simulation/: __init__.py  environment.py  experiments.py  persona_generator.py
