[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-persona-simulation-engine"
version = "0.1.0"
description = "Prototype engine for simulating synthetic user personas"
readme = "README.md"
authors = [{ name = "Synthetic Persona Team" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "plotly>=5.17",
    "streamlit>=1.28",
    "python-pptx>=0.6.21",
]

[project.optional-dependencies]
dev = ["black", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
